--- a/submenu.css
+++ b/submenu.css
@@ -22,6 +22,14 @@ body {
   position:relative;
 }
 
+.textContainer:after {
+  content: ".";
+  visibility: hidden;
+  display: block;
+  height: 0;
+  clear: both;
+}
+
 .textContainer {
   font-size: 14px;
   padding: 12px 12px;
@@ -44,26 +52,29 @@ body {
 }
 
 p.name {
-  /*font-weight: 300;*/
-}
-
-p.name70 {
-  width: 70%;
   float: left;
-  /*font-weight: 300;*/
+  font-weight: 600;
+  padding-right: 20px;
+  height: 100%;
 }
 
 .prices {
-  margin: 10px 0px 0px 0px;
   float: left;
-  width: 30%;
-}
-
-.prices_two {
-  float: left;
-  width: 30%;
   text-align: right;
 }
+
+.expandArrow {
+  content: url("expandArrow.png");
+  width: 14px;
+  height: auto;
+  margin: 0 auto;
+}
+
+.expandArrowContainer {
+  float: right;
+  text-align: right;
+}
+
 
 .ingredients {
   vertical-align: middle;
@@ -86,6 +97,11 @@ p.ingredientDisclaimer {
   /*width: 70%;*/
 }
 
+.details {
+  font-size: 14px;
+  margin:  10px 0px 0px 0px;
+}
+
 /* this is for text overlay */
 .tapToLearn {
   margin: 10px 0px 0px 0px;
@@ -93,8 +109,9 @@ p.ingredientDisclaimer {
   border-radius: 4px;
   border: 1px solid black;
   display: inline-block;
-  padding: 8px;
+  padding: 6px;
   z-index: 9999;
+  font-size: 12px;
 }
 
 .expandableSection {
@@ -108,7 +125,7 @@ p.ingredientDisclaimer {
   display: flex;
   height: 35vH;
   border-radius: 10px;
-  margin: 14px 0px 14px 0px;
+  margin: 14px 0px 0px 0px;
   position: relative;
 
   /* allow for scrolling */
@@ -120,23 +137,6 @@ p.ingredientDisclaimer {
   scroll-behavior: smooth;
 
 }
-
-.expandArrow {
-  content: url("expandArrow.png");
-  width: 100%;
-  height: auto;
-  margin: 0 auto;
-}
-
-.expandArrowContainer {
-  width: 20px;
-  position: absolute;
-  bottom: 3px;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%)
-}
-
 
 .clearDiv {
   clear: both;
